gitignore angepasst, CMakeLists.txt angepasst
git-svn-id: https://repos.cs.tu-dortmund.de/essvn/studis/BA-Daniel-Siegert/trunk/faultinjector@4820 715e533e-1b6e-4a5f-915a-d1258084fdf9

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,7 @@ cmake_minimum_required(VERSION 3.8)
 set(PROJECT_NAME "clang-sfi")
 project(${PROJECT_NAME})
 
+SET(CMAKE_EXPORT_COMPILE_COMMANDS true)
 SET(CMAKE_C_COMPILER clang)
 SET(CMAKE_CXX_COMPILER clang++)
 # Clang is compiled with -fno-rtti by default, so we have to use it too. (Could be activated in Clangs CMakeFile if needed.) Otherwise the compiler might try to use typeinfo symbols of Clang, which are just not there.
