MIT-license, corrected C9(also ifs and switchs(jumps) (Appendix)), congig.json
git-svn-id: https://repos.cs.tu-dortmund.de/essvn/studis/BA-Daniel-Siegert/trunk/faultinjector@4844 715e533e-1b6e-4a5f-915a-d1258084fdf9

--- a/config.json
+++ b/config.json
@@ -1,16 +1,17 @@
 {
     "injectors":[
-        "_MFC",
-        "_MVIV",
-        "_MVAV",
-        "_MVAE",
-        "_MIA",
-        "_MIFS",
-        "_MIEB",
-        "_MLAC",
-        "_MLOC",
-        "_MLPA",
-        "_WVAV",
-        "WPFV"
+        "MFC",
+        "MVIV",
+        "MVAV",
+        "MVAE",
+        "MIA",
+        "MIFS",
+        "MIEB",
+        "MLAC",
+        "MLOC",
+        "MLPA",
+        "WVAV",
+        "WPFV",
+        "WAEP"
     ]
 }
