--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -31,6 +31,9 @@
         "tuple": "cpp",
         "type_traits": "cpp",
         "typeinfo": "cpp",
-        "utility": "cpp"
+        "utility": "cpp",
+        "valarray": "cpp",
+        "ctime": "cpp",
+        "iomanip": "cpp"
     }
 }
