compilation and execution, TODO:timeout
git-svn-id: https://repos.cs.tu-dortmund.de/essvn/studis/BA-Daniel-Siegert/trunk/faultinjector@4848 715e533e-1b6e-4a5f-915a-d1258084fdf9

--- a/config.json
+++ b/config.json
@@ -1,5 +1,9 @@
 {
     "destDirectory":"faults",
+    "compileCommand":"/usr/bin/clang++",
+    "compileCommandArgs":["src/test.cpp"],
+    "fileToExec":"./a.out",
+    "-fileToExec":"/home/daniel/ba/BA-Repo/faultinjector/out.a",
     "injectors":[
         "MFC",
         "MVIV",
