verbose in config, changed output, summary for exit status 0 with return value other than 0
git-svn-id: https://repos.cs.tu-dortmund.de/essvn/studis/BA-Daniel-Siegert/trunk/faultinjector@4849 715e533e-1b6e-4a5f-915a-d1258084fdf9

--- a/config.json
+++ b/config.json
@@ -1,5 +1,6 @@
 {
     "destDirectory":"faults",
+    "verbose":true,
     "compileCommand":"/usr/bin/clang++",
     "compileCommandArgs":["src/test.cpp"],
     "fileToExec":"./a.out",
