bugfixes in execution, timeout now in ms, multipleExecution of Injected fault(config)
git-svn-id: https://repos.cs.tu-dortmund.de/essvn/studis/BA-Daniel-Siegert/trunk/faultinjector@4850 715e533e-1b6e-4a5f-915a-d1258084fdf9

--- a/config.json
+++ b/config.json
@@ -1,6 +1,8 @@
 {
     "destDirectory":"faults",
     "verbose":true,
+    "timeout":500,
+    "multipleRuns":3,
     "compileCommand":"/usr/bin/clang++",
     "compileCommandArgs":["src/test.cpp"],
     "fileToExec":"./a.out",
