compilation from main to new function compile that uses the summary.json
git-svn-id: https://repos.cs.tu-dortmund.de/essvn/studis/BA-Daniel-Siegert/trunk/faultinjector@4867 715e533e-1b6e-4a5f-915a-d1258084fdf9

--- a/config.json
+++ b/config.json
@@ -3,10 +3,10 @@
     "verbose":false,
     "timeout":500,
     "multipleRuns":1,
-    "_compileCommand":"/usr/bin/clang++",
+    "compileCommand":"/usr/bin/clang++",
     "compileCommandArgs":["src/test.cpp"],
     "fileToExec":"./a.out",
-    "_fileToExec":"/home/daniel/ba/BA-Repo/faultinjector/out.a",
+    "fileToExec":"/home/daniel/ba/BA-Repo/faultinjector/out.a",
     "injectors":[
         "MFC",
         "MVIV",
