use of ASTFrontendAction instead of SyntaxOnlyAction
git-svn-id: https://repos.cs.tu-dortmund.de/essvn/studis/BA-Daniel-Siegert/trunk/faultinjector@4883 715e533e-1b6e-4a5f-915a-d1258084fdf9

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -34,6 +34,9 @@
         "utility": "cpp",
         "valarray": "cpp",
         "ctime": "cpp",
-        "iomanip": "cpp"
+        "iomanip": "cpp",
+        "chrono": "cpp",
+        "csignal": "cpp",
+        "ratio": "cpp"
     }
 }
