important bugfix at WPFV Injection
git-svn-id: https://repos.cs.tu-dortmund.de/essvn/studis/BA-Daniel-Siegert/trunk/faultinjector@4933 715e533e-1b6e-4a5f-915a-d1258084fdf9

--- a/.gitignore
+++ b/.gitignore
@@ -13,8 +13,13 @@ compile_commands.json
 !src/*
 !src/FaultInjectors/*
 !src/libs/*
+src/a.out
 faluts
 faults
+faults2
 mcpp.sh
 test.ii
+test.cc
+test.jj
 stAGHLaZ
+.vscode
