Cleaned up .gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,1 @@
-clang-sfi
-Makefile
-CMake*
-!CMakeLists.txt
-*.cmake
-cmake*
-DartConfiguration.tcl
-compile_commands.json
-*.a
-*.out
-*.patch
-*.cpp
-!src/*
-!src/FaultInjectors/*
-!src/libs/*
-src/a.out
-faluts
-faults
-faults2
-mcpp.sh
-test.ii
-test.cc
-test.jj
-stAGHLaZ
-.vscode
+build/
