Building on Windows with Visual Studio

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,8 +41,12 @@ target_link_libraries(${PROJECT_NAME} PRIVATE ${PROJECT_NAME}_lib)
 # Link against LLVM libraries
 # target_link_libraries(${PROJECT_NAME} PRIVATE ${llvm_libs})
 # but this does not work for the clang libs, so we just link against everything...
+if(WIN32)
+	file(GLOB ALL_MY_LLVM_LIBS "${LLVM_DIR}/../../../Release/lib/*.lib")
+else()
+	file(GLOB ALL_MY_LLVM_LIBS "${LLVM_DIR}/../../*.a")
+endif()
 
-file(GLOB ALL_MY_LLVM_LIBS "${LLVM_DIR}/../../*.a")
 if (NOT ALL_MY_LLVM_LIBS)
 	message(FATAL_ERROR "Did not find any library files in \"${LLVM_DIR}/../../*.a\"")
 endif(NOT ALL_MY_LLVM_LIBS)
@@ -53,7 +57,11 @@ if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
 else()
 	target_link_libraries(${PROJECT_NAME} PRIVATE ${ALL_MY_LLVM_LIBS})
 endif()
+if(WIN32)
+target_link_libraries(${PROJECT_NAME} PRIVATE ${ZLIB_LIBRARIES} Version.lib)
+else()
 target_link_libraries(${PROJECT_NAME} PRIVATE ${ZLIB_LIBRARIES} curses)
+endif()
 if(UNIX AND NOT APPLE)
 	# Additional library for Linux systems.
 	target_link_libraries(${PROJECT_NAME} PRIVATE pthread)
