Added header files in CMakeLists.txt on Windows environments so that they are shown in Visual Studio.
Fixed bug in build_win.sh

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,8 +28,14 @@ find_package(ZLIB REQUIRED)
 include_directories(src)
 set(SOURCE_FILES src/StmtHandler.cpp src/FaultInjector.cpp src/SFIASTConsumer.cpp src/SFIAction.cpp src/utils.cpp src/FaultConstraints.cpp)
 file(GLOB ALL_FAULTINJECTORS src/FaultInjectors/*.cpp)
-add_library(${PROJECT_NAME}_lib ${SOURCE_FILES} ${ALL_FAULTINJECTORS})
-add_executable(${PROJECT_NAME} src/main.cpp)
+if(WIN32)
+	file(GLOB HEADER_FILES src/*.h)
+	add_library(${PROJECT_NAME}_lib ${SOURCE_FILES} ${ALL_FAULTINJECTORS} ${HEADER_FILES} src/FaultInjectors/_all.h)
+	add_executable(${PROJECT_NAME} src/main.cpp src/libs/json.hpp)
+else()
+	add_library(${PROJECT_NAME}_lib ${SOURCE_FILES} ${ALL_FAULTINJECTORS})
+	add_executable(${PROJECT_NAME} src/main.cpp)
+endif()
 target_link_libraries(${PROJECT_NAME} PRIVATE ${PROJECT_NAME}_lib)
 
 ###
