added dtl lib for differences
possibility to inject in more than one file
Rewriter is now created in _inject and inject now gets it as argument. The return type now is bool and indicates success.

TODO: fix apply patches in main.cpp!!

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,10 +30,11 @@ include_directories(src)
 set(SOURCE_FILES src/StmtHandler.cpp src/FaultInjector.cpp src/SFIASTConsumer.cpp src/SFIAction.cpp src/utils.cpp src/FaultConstraints.cpp)
 file(GLOB HEADER_FILES src/*.h)
 file(GLOB ALL_FAULTINJECTORS src/FaultInjectors/*.cpp)
+file(GLOB DTL_ALL src/libs/dtl/dtl/*.hpp)
 
 source_group("FaultInjectors" FILES ${ALL_FAULTINJECTORS} src/FaultInjectors/_all.h)
 source_group("clang-sfi" FILES ${SOURCE_FILES} src/main.cpp )
-source_group("libs" FILES src/libs/json.hpp)
+source_group("libs" FILES src/libs/json.hpp ${DTL_ALL})
 if(WIN32)
 	add_library(${PROJECT_NAME}_lib ${SOURCE_FILES} ${ALL_FAULTINJECTORS} ${HEADER_FILES} src/FaultInjectors/_all.h)
 	add_executable(${PROJECT_NAME} src/main.cpp src/libs/json.hpp)
