--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,9 +27,13 @@ find_package(ZLIB REQUIRED)
 # Setup project specific things.
 include_directories(src)
 set(SOURCE_FILES src/StmtHandler.cpp src/FaultInjector.cpp src/SFIASTConsumer.cpp src/SFIAction.cpp src/utils.cpp src/FaultConstraints.cpp)
+file(GLOB HEADER_FILES src/*.h)
 file(GLOB ALL_FAULTINJECTORS src/FaultInjectors/*.cpp)
+
+source_group("FaultInjectors" FILES ${ALL_FAULTINJECTORS} src/FaultInjectors/_all.h)
+source_group("clang-sfi" FILES ${SOURCE_FILES} src/main.cpp )
+source_group("libs" FILES src/libs/json.hpp)
 if(WIN32)
-	file(GLOB HEADER_FILES src/*.h)
 	add_library(${PROJECT_NAME}_lib ${SOURCE_FILES} ${ALL_FAULTINJECTORS} ${HEADER_FILES} src/FaultInjectors/_all.h)
 	add_executable(${PROJECT_NAME} src/main.cpp src/libs/json.hpp)
 else()
