--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,14 +3,13 @@ set(PROJECT_NAME "clang-sfi")
 project(${PROJECT_NAME})
 
 ###
-# Some integration tests use compile_commands.json
+# Some integration tests use compile_commands.json, so generate it.
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 # LLVM 9.0 complains about this in older LLVM code, but it is fixed in newer versions, so we just ignore it.
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-defaulted-function-deleted")
 
 ###
 # Setup LLVM+Clang includes and options.
-set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 find_package(LLVM REQUIRED CONFIG)
 message(STATUS "Found LLVM ${LLVM_PACKAGE_VERSION}")
 message(STATUS "Using LLVMConfig.cmake in: ${LLVM_DIR}")
@@ -56,43 +55,36 @@ endif()
 target_link_libraries(${PROJECT_NAME} PRIVATE ${PROJECT_NAME}_lib)
 
 ###
-# Find the libraries that correspond to the LLVM components
-# that we wish to use
-
-# Normally:
-llvm_map_components_to_libnames(LLVM_LIBS Support core irreader Option ProfileData MC AArch64AsmParser)
-# Link against LLVM libraries
-#target_link_libraries(${PROJECT_NAME} PRIVATE ${LLVM_LIBS})
-# but this does not work for the clang libs, so we just link against everything...
+# Link clang libraries
+# llvm_map_components_to_libnames does not work for clang libs, so we just link them all...
 if(WIN32)
 	file(GLOB CLANG_LIBS "${LLVM_DIR}/../../../Release/lib/libclang*.lib")
 else()
 	file(GLOB CLANG_LIBS "${LLVM_DIR}/../../libclang*.a")
 endif()
-
 if (NOT CLANG_LIBS)
-	message(FATAL_ERROR "Did not find any library files in \"${LLVM_DIR}/../../*.a\"")
+	message(FATAL_ERROR "Did not find any library files for \$CLANG_LIBS")
 endif(NOT CLANG_LIBS)
 # message(STATUS "Using the following Clang libs: ${CLANG_LIBS}")
-# message(STATUS "Using the following LLVM libs: ${LLVM_LIBS}")
-if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
-	# GCC will likely use a linker which cares for link order, so we wrap the LLVM libs in a group.
-	# message(STATUS "Using GCC so we fall back to --start-group/--end-group")
-	target_link_libraries(${PROJECT_NAME} PRIVATE -Wl,--start-group ${CLANG_LIBS} ${LLVM_LIBS} -Wl,--end-group)
-else()
-	target_link_libraries(${PROJECT_NAME} PRIVATE ${CLANG_LIBS} ${LLVM_LIBS})
-endif()
+target_link_libraries(${PROJECT_NAME} PRIVATE -Wl,--start-group ${CLANG_LIBS} -Wl,--end-group)
+# target_link_libraries(${PROJECT_NAME} PRIVATE clangBasic clangFrontend clangTooling clangToolingASTDiff clangToolingRefactor clangCrossTU clangIndex clangAST clangLex clangSerialization clangSema clangAnalysis clangARCMigrate clangEdit clangDriver clangParse)
+
+# Find the libraries that correspond to the LLVM components that we wish to use
+llvm_map_components_to_libnames(LLVM_LIBS Support core irreader Option ProfileData MC AArch64AsmParser)
+# Link against LLVM libraries
+target_link_libraries(${PROJECT_NAME} PRIVATE ${LLVM_LIBS})
+
+###
+# Some other libraries needed by LLVM/Clang
 if(WIN32)
-target_link_libraries(${PROJECT_NAME} PRIVATE ${ZLIB_LIBRARIES} Version.lib)
+	target_link_libraries(${PROJECT_NAME} PRIVATE ${ZLIB_LIBRARIES} Version.lib)
 else()
-target_link_libraries(${PROJECT_NAME} PRIVATE ${ZLIB_LIBRARIES} curses)
+	target_link_libraries(${PROJECT_NAME} PRIVATE ${ZLIB_LIBRARIES} curses)
 endif()
 if(UNIX AND NOT APPLE)
 	# Additional library for Linux systems.
 	target_link_libraries(${PROJECT_NAME} PRIVATE pthread)
 endif()
-#target_link_libraries(${PROJECT_NAME} PRIVATE clangBasic clangFrontend clangTooling clangToolingASTDiff clangToolingRefactor clangCrossTU clangIndex clangAST clangLex clangSerialization clangSema clangAnalysis clangARCMigrate clangEdit clangDriver clangParse)
-
 
 ###
 # Setup testing
